--- a/.github/workflows/ci-deploy-dev.yml
+++ b/.github/workflows/ci-deploy-dev.yml
@@ -31,11 +31,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
-          serverless config credentials \
-            --provider aws \
-            --key "$AWS_ACCESS_KEY_ID" \
-            --secret "$AWS_SECRET_ACCESS_KEY"
+          serverless config credentials             --provider aws             --key "$AWS_ACCESS_KEY_ID"             --secret "$AWS_SECRET_ACCESS_KEY"
 
       - name: Desplegar con Serverless (stage: dev)
         run: sls deploy --stage dev
-
