--- a/.github/workflows/ci-deploy-dev.yml
+++ b/.github/workflows/ci-deploy-dev.yml
@@ -27,8 +27,7 @@ jobs:
         run: npm install -g serverless
 
       - name: Desplegar con Serverless (stage: dev)
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
+          export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
+          export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
           sls deploy --stage dev
