--- a/.github/workflows/ci-deploy-dev.yml
+++ b/.github/workflows/ci-deploy-dev.yml
@@ -23,8 +23,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Instalar Serverless Framework
-        run: npm install -g serverless
+      - name: Instalar Serverless Framework v3
+        run: npm install -g serverless@3
 
       - name: "Desplegar con Serverless (stage: dev)"
         run: sls deploy --stage dev
