--- a/serverless.yml
+++ b/serverless.yml
@@ -12,12 +12,12 @@ functions:
     handler: lambda_entidades_primarias.main.handler
     events:
       - httpApi:
-          path: /api/v1/entidades-primarias
+          path: /entidades-primarias
           method: any
 
   instituciones:
     handler: lambda_instituciones.main.handler
     events:
       - httpApi:
-          path: /api/v1/instituciones
+          path: /instituciones
           method: any
