--- a/.github/workflows/ci-deploy-dev.yml
+++ b/.github/workflows/ci-deploy-dev.yml
@@ -1,5 +1,3 @@
-name: Deploy to Dev (AWS Lambda)
-
 on:
   push:
     branches:
@@ -21,7 +19,7 @@ jobs:
       - name: Instalar dependencias Python
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r requirements.txt -t lambda_recursos_terapeuticos/
 
       - name: Instalar Serverless Framework v3
         run: npm install -g serverless@3
