--- a/.github/workflows/ci-deploy-dev.yml
+++ b/.github/workflows/ci-deploy-dev.yml
@@ -11,14 +11,16 @@ jobs:
       - name: Checkout código fuente
         uses: actions/checkout@v3
 
-      - name: Configurar Python 3.12
+      - name: Configurar Python 3.10
         uses: actions/setup-python@v4
         with:
-          python-version: '3.12'
+          python-version: '3.10'
 
       - name: Instalar dependencias Python
         run: |
-          python -m pip install --upgrade pip
+          python3 -m venv venv
+          source venv/bin/activate
+          python3 -m pip install --upgrade pip
           pip install -r requirements.txt -t lambda_recursos_terapeuticos/
 
       - name: Instalar Serverless Framework v3
