--- a/.github/workflows/ci-deploy-dev.yml
+++ b/.github/workflows/ci-deploy-dev.yml
@@ -21,7 +21,7 @@ jobs:
           python3 -m venv venv
           source venv/bin/activate
           python3 -m pip install --upgrade pip
-          pip install -r requirements.txt -t lambda_recursos_terapeuticos/
+          pip install -r requirements.txt
 
       - name: Instalar Serverless Framework v3
         run: npm install -g serverless@3
