--- a/serverless.yml
+++ b/serverless.yml
@@ -14,6 +14,14 @@ provider:
     DATABASE_USER: userkneerehab
     DATABASE_PASSWORD: LFS1ieqpA7bhuCK3W1Xo
 
+    COGNITO_CLIENT_ID: 18ojcokska1igo3hrb743d6bt5
+    COGNITO_CLIENT_SECRET: 1eim1p0a80bkrks410u4mlk5795lon8jkldrte1dr9mge75jfvbo
+    COGNITO_METADATA_URL: https://cognito-idp.us-east-1.amazonaws.com/tu_pool_id/.well-known/openid-configuration
+    USER_POOL_ID: us-east-1_ZU66EGIZV
+
+    ACCESS_KEY_AWS: AKIA43IBNFXXZGJRU5QI
+    SECRET_KEY_AWS: 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
+
 functions:
   api:
     handler: autentificador.app.main.handler
